Implement crafter filter